# GuiXi

./: DESIGN.md  LICENSE  README.md  README_CN.md  pyproject.toml  requirements.txt  upload_pypi.bat  upload_pypi.sh
data/: sample_prompts.json  test_cases.json
guixi/: __init__.py  __main__.py  __version__.py  api.py  app.py  cache.py  cli.py  compress.py  core.py  gui.py  protocol.py  sync.py  tools.py
templates/: index.html
tests/: conftest.py  test_core.py  test_unified_api.py
